--- a/tests/index.html
+++ b/tests/index.html
@@ -11,7 +11,7 @@
     {{content-for 'test-head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/test-runner.css">
+    <link rel="stylesheet" href="assets/better-reporter.css">
     <link rel="stylesheet" href="assets/test-support.css">
 
     {{content-for 'head-footer'}}
@@ -23,7 +23,7 @@
     {{content-for 'test-body'}}
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
-    <script src="assets/test-runner.js"></script>
+    <script src="assets/better-reporter.js"></script>
     <script src="testem.js"></script>
     <script src="assets/test-loader.js"></script>
 
